--- a/azure.yaml
+++ b/azure.yaml
@@ -5,18 +5,19 @@ workflows:
   up:
     steps:
       - azd: provision
-hooks:
-  postprovision:
-    posix:
-      shell: sh
-      continueOnError: false
-      interactive: true
-      run: infra/hooks/postprovision.sh
-    windows:
-      shell: pwsh
-      continueOnError: false
-      interactive: true
-      run: infra/hooks/postprovision.ps1
+      
+# hooks:
+#   postprovision:
+#     posix:
+#       shell: sh
+#       continueOnError: false
+#       interactive: true
+#       run: infra/hooks/postprovision.sh
+#     windows:
+#       shell: pwsh
+#       continueOnError: false
+#       interactive: true
+#       run: infra/hooks/postprovision.ps1
 
 services:
   rag-flow:
