--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -8,16 +8,20 @@ on:
   push:
     branches:
       - develop
-    paths-ignore:
-      - '**.md' 
 
-jobs:
+jobs:  
   setup-env-vars:
     runs-on: ubuntu-latest
-    env:
-      IMAGE_NAME: rag-project    
     environment: dev
+    env:
+      AZURE_DEV_COLLECT_TELEMETRY: no    
     steps:
+      - name: Check repository
+        run: |
+          if [[ "${{ github.repository }}" == "azure/llmops-project-template" ]]; then
+            echo "This workflow is disabled for llmops-project repository."
+            exit 0
+          fi      
       - uses: actions/checkout@v4
       - name: Check GitHub env variables
         run: |
@@ -26,21 +30,22 @@ jobs:
             exit 1
           else
             echo "AZURE_ENV_NAME is set to ${{ vars.AZURE_ENV_NAME }}"
+            export AZURE_DEV_COLLECT_TELEMETRY=no            
           fi
 
-      - name: Set image tag
-        run: echo "IMAGE_TAG=${{ env.IMAGE_NAME }}:${{ github.sha }}" > variables.env
 
       - name: Install azd
         uses: Azure/setup-azd@v1.0.0
 
-      - name: Get azd env variables
+      - name: Get azd env variables 
         run: |
           echo "Logging to AZD..."
+
           AZURE_CREDENTIALS=$(echo '${{ secrets.AZURE_CREDENTIALS }}' | jq -r .)
           CLIENT_ID=$(echo $AZURE_CREDENTIALS | jq -r .clientId)
           CLIENT_SECRET=$(echo $AZURE_CREDENTIALS | jq -r .clientSecret)
           TENANT_ID=$(echo $AZURE_CREDENTIALS | jq -r .tenantId)
+
           azd auth login --client-id $CLIENT_ID --client-secret $CLIENT_SECRET --tenant-id $TENANT_ID        
 
           SUBSCRIPTION_ID=${{ vars.AZURE_SUBSCRIPTION_ID }}
@@ -52,28 +57,36 @@ jobs:
           azd init -e ${{ vars.AZURE_ENV_NAME }} -l $LOCATION -s $SUBSCRIPTION_ID
 
           # check if provisioned if not provision
-          azd provision --no-prompt
+          # azd provision --no-prompt
 
           azd env refresh
           echo "azd ${{ vars.AZURE_ENV_NAME }} environment variables"
 
           AZURE_SEARCH_ENDPOINT=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_SEARCH_ENDPOINT | cut -d'=' -f2 | tr -d '"')
           echo "AZURE_SEARCH_ENDPOINT=$AZURE_SEARCH_ENDPOINT" >> variables.env
-
           AZURE_CONTAINER_REGISTRY_NAME=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_CONTAINER_REGISTRY_NAME | cut -d'=' -f2 | tr -d '"')
           echo "AZURE_CONTAINER_REGISTRY_NAME=$AZURE_CONTAINER_REGISTRY_NAME" >> variables.env
-
-          AZURE_EMBEDDING_NAME=text-embedding-ada-002
-          echo "AZURE_EMBEDDING_NAME=$AZURE_EMBEDDING_NAME" >> variables.env
-
-          AZURE_OPENAI_API_VERSION=2024-02-15-preview
+          AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME | cut -d'=' -f2 | tr -d '"')
+          echo "AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME=$AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME" >> variables.env
+          AZURE_OPENAI_CHAT_DEPLOYMENT=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_OPENAI_CHAT_DEPLOYMENT | cut -d'=' -f2 | tr -d '"')
+          echo "AZURE_OPENAI_CHAT_DEPLOYMENT=$AZURE_OPENAI_CHAT_DEPLOYMENT" >> variables.env
+          AZURE_OPENAI_EMBEDDING_DEPLOYMENT=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_OPENAI_EMBEDDING_DEPLOYMENT | cut -d'=' -f2 | tr -d '"')
+          echo "AZURE_OPENAI_EMBEDDING_DEPLOYMENT=$AZURE_OPENAI_EMBEDDING_DEPLOYMENT" >> variables.env          
+          AZURE_OPENAI_EMBEDDING_MODEL=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_OPENAI_EMBEDDING_MODEL | cut -d'=' -f2 | tr -d '"')
+          echo "AZURE_OPENAI_EMBEDDING_MODEL=$AZURE_OPENAI_EMBEDDING_MODEL" >> variables.env          
+          AZURE_OPENAI_API_VERSION=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_OPENAI_API_VERSION | cut -d'=' -f2 | tr -d '"')
           echo "AZURE_OPENAI_API_VERSION=$AZURE_OPENAI_API_VERSION" >> variables.env
-
           AZURE_OPENAI_ENDPOINT=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_OPENAI_ENDPOINT | cut -d'=' -f2 | tr -d '"')
-          echo "AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT" >> variables.env
+          echo "AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT" >> variables.env      
+          PROMPTFLOW_WORKER_NUM=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep PROMPTFLOW_WORKER_NUM | cut -d'=' -f2 | tr -d '"')
+          echo "PROMPTFLOW_WORKER_NUM=$PROMPTFLOW_WORKER_NUM" >> variables.env                   
+          PROMPTFLOW_SERVING_ENGINE=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep PROMPTFLOW_SERVING_ENGINE | cut -d'=' -f2 | tr -d '"')
+          echo "PROMPTFLOW_SERVING_ENGINE=$PROMPTFLOW_SERVING_ENGINE" >> variables.env                   
 
-          AZURE_DEPLOYMENT_NAME=gpt-4
-          echo "AZURE_DEPLOYMENT_NAME=$AZURE_DEPLOYMENT_NAME" >> variables.env
+      - name: Set image tag
+        run: |
+          AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME=$(azd env get-values -e ${{ vars.AZURE_ENV_NAME }} | grep AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME | cut -d'=' -f2 | tr -d '"')
+          echo "IMAGE_TAG=$AZURE_CONTAINER_REGISTRY_REPOSITORY_NAME:${{ github.sha }}" >> variables.env
 
       - name: Upload variables
         uses: actions/upload-artifact@v4
@@ -97,11 +110,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          pip install -r requirements.txt              
+          pip install -r requirements.txt
 
       - name: Test with pytest
         env:
-          PYTHONPATH: flow
+          PYTHONPATH: src
           PYTHONWARNINGS: ignore::DeprecationWarning,ignore::RemovedInMarshmallow4Warning
         run: pytest tests/ --doctest-modules --junitxml=junit/test-results-3.8.xml
 
@@ -111,6 +124,15 @@ jobs:
           name: pytest-results-3.8
           path: junit/test-results-3.8.xml
         if: always()
+
+  code-standard-check:
+    needs: [setup-env-vars]    
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
+      - name: Check code standards
+        run: |
+          echo "Run Pylint"
 
   build-and-evaluate-flow:
     needs: [setup-env-vars, unit-testing]
@@ -127,22 +149,24 @@ jobs:
       - name: Load variables
         run: |
           source variables.env
-          echo "SUBSCRIPTION_ID is $SUBSCRIPTION_ID"
-          echo "SUBSCRIPTION_ID=$SUBSCRIPTION_ID" >> $GITHUB_ENV
-          echo "LOCATION is $LOCATION"
-          echo "LOCATION=$LOCATION" >> $GITHUB_ENV
-          echo "AZURE_SEARCH_ENDPOINT is $AZURE_SEARCH_ENDPOINT"
-          echo "AZURE_SEARCH_ENDPOINT=$AZURE_SEARCH_ENDPOINT" >> $GITHUB_ENV
           echo "AZURE_CONTAINER_REGISTRY_NAME is $AZURE_CONTAINER_REGISTRY_NAME"
           echo "AZURE_CONTAINER_REGISTRY_NAME=$AZURE_CONTAINER_REGISTRY_NAME" >> $GITHUB_ENV
-          echo "AZURE_EMBEDDING_NAME is $AZURE_EMBEDDING_NAME"
-          echo "AZURE_EMBEDDING_NAME=$AZURE_EMBEDDING_NAME" >> $GITHUB_ENV
+          echo "AZURE_SEARCH_ENDPOINT is $AZURE_SEARCH_ENDPOINT"
+          echo "AZURE_SEARCH_ENDPOINT=$AZURE_SEARCH_ENDPOINT" >> $GITHUB_ENV
+          echo "AZURE_OPENAI_CHAT_DEPLOYMENT is $AZURE_OPENAI_CHAT_DEPLOYMENT"
+          echo "AZURE_OPENAI_CHAT_DEPLOYMENT=$AZURE_OPENAI_CHAT_DEPLOYMENT" >> $GITHUB_ENV
+          echo "AZURE_OPENAI_EMBEDDING_DEPLOYMENT is $AZURE_OPENAI_EMBEDDING_DEPLOYMENT"
+          echo "AZURE_OPENAI_EMBEDDING_DEPLOYMENT=$AZURE_OPENAI_EMBEDDING_DEPLOYMENT" >> $GITHUB_ENV
+          echo "AZURE_OPENAI_EMBEDDING_MODEL is $AZURE_OPENAI_EMBEDDING_MODEL"
+          echo "AZURE_OPENAI_EMBEDDING_MODEL=$AZURE_OPENAI_EMBEDDING_MODEL" >> $GITHUB_ENV
           echo "AZURE_OPENAI_API_VERSION is $AZURE_OPENAI_API_VERSION"
           echo "AZURE_OPENAI_API_VERSION=$AZURE_OPENAI_API_VERSION" >> $GITHUB_ENV
           echo "AZURE_OPENAI_ENDPOINT is $AZURE_OPENAI_ENDPOINT"
           echo "AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT" >> $GITHUB_ENV
-          echo "AZURE_DEPLOYMENT_NAME is $AZURE_DEPLOYMENT_NAME"
-          echo "AZURE_DEPLOYMENT_NAME=$AZURE_DEPLOYMENT_NAME" >> $GITHUB_ENV
+          echo "PROMPTFLOW_WORKER_NUM is $PROMPTFLOW_WORKER_NUM"
+          echo "PROMPTFLOW_WORKER_NUM=$PROMPTFLOW_WORKER_NUM" >> $GITHUB_ENV
+          echo "PROMPTFLOW_SERVING_ENGINE is $PROMPTFLOW_SERVING_ENGINE"
+          echo "PROMPTFLOW_SERVING_ENGINE=$PROMPTFLOW_SERVING_ENGINE" >> $GITHUB_ENV
           echo "IMAGE_TAG is $IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
@@ -161,12 +185,12 @@ jobs:
           pf --version  
 
       - name: Install required dependencies
-        run: pip install -r flow/requirements.txt
+        run: pip install -r src/requirements.txt
 
       - name: Create flow docker files
         run: |
           # reference: https://github.com/microsoft/promptflow/tree/main/examples/tutorials/flow-deploy/azure-app-service
-          pf flow build --source flow --output dist --format docker
+          pf flow build --source src --output dist --format docker
           mkdir -p dist/connections
           touch dist/connections/placeholder
 
@@ -179,25 +203,39 @@ jobs:
       - name: Build docker image
         run: |
           echo "IMAGE_TAG is $IMAGE_TAG"
-          docker build dist -t $IMAGE_TAG
+          docker build dist -t $IMAGE_TAG 
           
       - name: Start flow
         run: |
+          docker images
+
           docker run -d -p 8080:8080 \
-            -e PROMPTFLOW_WORKER_NUM=8 \
-            -e PROMPTFLOW_SERVING_ENGINE=fastapi \
+            -e PROMPTFLOW_WORKER_NUM=$PROMPTFLOW_WORKER_NUM \
+            -e PROMPTFLOW_SERVING_ENGINE=$PROMPTFLOW_SERVING_ENGINE \
             -e AZURE_SEARCH_ENDPOINT=$AZURE_SEARCH_ENDPOINT \
-            -e AZURE_EMBEDDING_NAME=$AZURE_EMBEDDING_NAME \
-            -e AZURE_OPENAI_API_VERSION=$AZURE_OPENAI_API_VERSION \
             -e AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT \
-            -e AZURE_DEPLOYMENT_NAME=$AZURE_DEPLOYMENT_NAME \
-            $IMAGE_TAG        
+            -e AZURE_OPENAI_API_VERSION=$AZURE_OPENAI_API_VERSION \
+            -e AZURE_OPENAI_CHAT_DEPLOYMENT=$AZURE_OPENAI_CHAT_DEPLOYMENT \
+            -e AZURE_OPENAI_EMBEDDING_DEPLOYMENT=$AZURE_OPENAI_EMBEDDING_DEPLOYMENT \
+            -e AZURE_OPENAI_EMBEDDING_MODEL=$AZURE_OPENAI_EMBEDDING_MODEL \
+            $IMAGE_TAG
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}            
 
       - name: Evaluate Flow
         run: |
-          echo "TODO: run evaluation flow"    
+          echo "Run AI-Based Flow evaluation"
+          
+      - name: Publish docker image to ACR
+        run: |
+          az acr login --name $AZURE_CONTAINER_REGISTRY_NAME
+          docker tag $IMAGE_TAG $AZURE_CONTAINER_REGISTRY_NAME.azurecr.io/$IMAGE_TAG
+          docker push $AZURE_CONTAINER_REGISTRY_NAME.azurecr.io/$IMAGE_TAG          
 
-  register-flow:
+  trigger-cd-pipeline:
     needs: build-and-evaluate-flow    
     runs-on: ubuntu-latest
     environment: dev
@@ -211,48 +249,8 @@ jobs:
       - name: Load variables
         run: |
           source variables.env
-          echo "SUBSCRIPTION_ID is $SUBSCRIPTION_ID"
-          echo "SUBSCRIPTION_ID=$SUBSCRIPTION_ID" >> $GITHUB_ENV
-          echo "LOCATION is $LOCATION"
-          echo "LOCATION=$LOCATION" >> $GITHUB_ENV
-          echo "AZURE_SEARCH_ENDPOINT is $AZURE_SEARCH_ENDPOINT"
-          echo "AZURE_SEARCH_ENDPOINT=$AZURE_SEARCH_ENDPOINT" >> $GITHUB_ENV
-          echo "AZURE_CONTAINER_REGISTRY_NAME is $AZURE_CONTAINER_REGISTRY_NAME"
-          echo "AZURE_CONTAINER_REGISTRY_NAME=$AZURE_CONTAINER_REGISTRY_NAME" >> $GITHUB_ENV
-          echo "AZURE_EMBEDDING_NAME is $AZURE_EMBEDDING_NAME"
-          echo "AZURE_EMBEDDING_NAME=$AZURE_EMBEDDING_NAME" >> $GITHUB_ENV
-          echo "AZURE_OPENAI_API_VERSION is $AZURE_OPENAI_API_VERSION"
-          echo "AZURE_OPENAI_API_VERSION=$AZURE_OPENAI_API_VERSION" >> $GITHUB_ENV
-          echo "AZURE_OPENAI_ENDPOINT is $AZURE_OPENAI_ENDPOINT"
-          echo "AZURE_OPENAI_ENDPOINT=$AZURE_OPENAI_ENDPOINT" >> $GITHUB_ENV
-          echo "AZURE_DEPLOYMENT_NAME is $AZURE_DEPLOYMENT_NAME"
-          echo "AZURE_DEPLOYMENT_NAME=$AZURE_DEPLOYMENT_NAME" >> $GITHUB_ENV
           echo "IMAGE_TAG is $IMAGE_TAG"
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-          path: dist/ 
-
-      - name: Build docker image
-        run: |
-          docker build dist -t $IMAGE_TAG
-            
-      - name: Publish docker image to ACR
-        run: |
-          az acr login --name $AZURE_CONTAINER_REGISTRY_NAME
-          docker tag $IMAGE_TAG $AZURE_CONTAINER_REGISTRY_NAME.azurecr.io/$IMAGE_TAG
-          docker push $AZURE_CONTAINER_REGISTRY_NAME.azurecr.io/$IMAGE_TAG
 
       - name: Trigger CD Workflow
         run: |
@@ -260,5 +258,5 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/${{ github.repository }}/actions/workflows/continuous_deployment_dev.yml/dispatches \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/continuous_delivery_dev.yml/dispatches \
             -d '{"ref":"develop","inputs":{"image_tag":"'"$IMAGE_TAG"'"}}'
