--- a/.github/workflows/continuous_delivery_dev.yml
+++ b/.github/workflows/continuous_delivery_dev.yml
@@ -9,6 +9,7 @@ on:
   
 jobs:
   provision-and-deploy:
+    if: ${{ github.repository != 'Azure/llmops-project-template' }}    
     runs-on: ubuntu-latest
     environment: dev
     env:
@@ -18,13 +19,7 @@ jobs:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       AZURE_DEV_COLLECT_TELEMETRY: no
 
-    steps:
-      - name: Check repository
-        run: |
-          if [[ "${{ github.repository }}" == "Azure/llmops-project-template" ]]; then
-            echo "This workflow is disabled for llmops-project repository."
-            exit 0
-          fi            
+    steps:   
       - name: Checkout
         uses: actions/checkout@v4
 
