--- a/.github/workflows/continuous_delivery_qa.yml
+++ b/.github/workflows/continuous_delivery_qa.yml
@@ -8,15 +8,10 @@ on:
 jobs:
 
   qa-flow-evaluation:
+    if: ${{ github.repository != 'Azure/llmops-project-template' }}    
     runs-on: ubuntu-latest
     environment: qa
-    steps:
-      - name: Check repository
-        run: |
-          if [[ "${{ github.repository }}" == "Azure/llmops-project-template" ]]; then
-            echo "This workflow is disabled for llmops-project repository."
-            exit 0
-          fi           
+    steps:        
       - name: Evaluate Flow
         run: |
           echo "Run QA AI-Based Flow evaluation"
