--- a/.github/workflows/pr_pipeline.yml
+++ b/.github/workflows/pr_pipeline.yml
@@ -8,15 +8,10 @@ on:
 jobs:
 
   unit-testing:
+    if: ${{ github.repository != 'Azure/llmops-project-template' }}    
     runs-on: ubuntu-latest
     environment: dev
-    steps:
-      - name: Check repository
-        run: |
-          if [[ "${{ github.repository }}" == "Azure/llmops-project-template" ]]; then
-            echo "This workflow is disabled for llmops-project repository."
-            exit 0
-          fi            
+    steps:       
       - uses: actions/checkout@v4
       - name: Setup Python 
         uses: actions/setup-python@v5
